--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "date-fns": "^3.1.0",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.21.1",
+    "react-router-dom": "^6.22.3",
     "recharts": "^2.10.3",
     "sass": "^1.69.7"
   },
